# adasa

./: Cargo.toml  README.md
docs/: PERFORMANCE_OPTIMIZATIONS.md  cli-output-formatting.md  configuration-files.md  daemon-management.md  graceful-shutdown.md  resource-limits.md  rolling-restart.md  task-27-implementation-summary.md
examples/: config-quick-reference.md  config.json  config.toml  graceful_shutdown_demo.rs  ipc_server_demo.rs  monitor_demo.rs  output_demo.rs  output_formatting_guide.md  resource-limits.toml  restart_demo.rs  rolling_restart_demo.rs  single-process.toml  supervisor_demo.rs  systemd-setup-example.sh  test-config-demo.sh
src/: daemon.rs  error.rs  lib.rs  main.rs  perf.rs
src/cli/: commands.rs  mod.rs  output.rs
src/config/: mod.rs
src/daemon/: daemonize.rs  manager.rs  mod.rs  pid.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/logs/: manager.rs  mod.rs  reader.rs  writer.rs
src/process/: limits.rs  manager.rs  mod.rs  monitor.rs  restart.rs  spawner.rs  supervisor.rs  types.rs
src/process/manager/: tests.rs
src/state/: mod.rs
systemd/: QUICKSTART.md  README.md  adasa-user.service  adasa.service  install.sh
tests/: config_file_test.rs  graceful_shutdown_test.rs  ipc_client_test.rs  ipc_protocol_test.rs  ipc_server_test.rs  log_manager_integration_test.rs  log_reader_integration_test.rs  resource_limits_test.rs  rolling_restart_integration_test.rs
