[package]
name = "adasa"
version = "0.1.0"
edition = "2021"

[lib]
name = "adasa"
path = "src/lib.rs"

[[bin]]
name = "adasa"
path = "src/main.rs"

[[bin]]
name = "adasa-daemon"
path = "src/daemon.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3.8"
